Fix a layout bug in the message view.

--- a/atarashii/usr/share/atarashii/atarashii.css
+++ b/atarashii/usr/share/atarashii/atarashii.css
@@ -79,10 +79,6 @@ a, a:hover, a:active {
 	cursor: pointer;
 }
 
-.space {
-	float: left;
-}
-
 
 .clearfloat {
 	clear: both;
